--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -6,6 +6,49 @@ ul {
 	list-style: none;
 }
 
+header {
+	background-color: #415b90;
+	font-size: medium;
+	padding: 10px;
+	text-decoration-color: #eaeaea;
+}
+
+.topnav {
+	overflow: hidden;
+	background-color: #e9e9e9;
+  }
+  
+  .topnav a {
+	float: left;
+	display: block;
+	color: black;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+  }
+  
+  .topnav a:hover {
+	background-color: #ddd;
+	color: black;
+  }
+  
+  .topnav a.active {
+	background-color: #11bae4;
+	color: white;
+  }
+  
+  .topnav .search-container {
+	float: right;
+  }
+  
+  .topnav input[type=text] {
+	padding: 6px;
+	margin-top: 8px;
+	font-size: 17px;
+	border: none;
+  }
+  
 body {
 	font-family: 'Open Sans', sans-serif;
 }
